--- a/views/Index.html
+++ b/views/Index.html
@@ -19,6 +19,7 @@
         </div>
         <ul class="sidebar-menu">
             <li><a href="/Index.html"><i class="fas fa-home"></i> Volver al Inicio</a></li>
+            <li><a href="#" onclick="cerrarSesion(); return false;"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
             <li><hr></li>
             <li><a href="/paso1.html"><i class="fas fa-lock"></i> Acceso</a></li>
             <li><a href="/paso2.html"><i class="fas fa-edit"></i> Captura de Datos</a></li>
@@ -39,14 +40,7 @@
                 <a href="/Index.html" style="text-decoration: none; color: inherit; flex: 1;">
                     <h1>INSPECCIÓN DIGITAL ASTIDA</h1>
                 </a>
-                <div class="header-space">
-                    <div class="user-menu" id="userMenu" style="display: none;">
-                        <span class="user-name" id="userName"></span>
-                        <button class="btn-logout" id="btnLogout">
-                            <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
-                        </button>
-                    </div>
-                </div>
+                <div class="header-space"></div>
             </div>
         </header>
 
