--- a/views/help.html
+++ b/views/help.html
@@ -19,6 +19,7 @@
         </div>
         <ul class="sidebar-menu">
             <li><a href="/Index.html"><i class="fas fa-home"></i> Volver al Inicio</a></li>
+            <li><a href="#" onclick="cerrarSesion(); return false;"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
             <li><hr></li>
             <li><a href="/paso1.html"><i class="fas fa-lock"></i> Acceso</a></li>
             <li><a href="/paso2.html"><i class="fas fa-edit"></i> Captura de Datos</a></li>
@@ -40,12 +41,6 @@
                     <h1>INSPECCIÓN DIGITAL ASTIDA</h1>
                 </a>
                 <div class="header-space"></div>
-            </div>
-            <div class="user-menu">
-                <span class="user-name" id="userName">Usuario</span>
-                <button class="btn-logout" onclick="cerrarSesion()">
-                    <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
-                </button>
             </div>
         </header>
 
